--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0"
   }
