--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-with-us-server",
+  "name": "books-r-us-server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0"
   }
