--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0"
   }
 }
