--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
-##
-**/.DS_Store
+# Logs
+logs
+*.log
+npm-debug.log*
 
 # dependencies
-/node_modules
+node_modules/
 
-# env vars
+# misc
+.DS_Store
+
+# dotenv environment variables file
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
+# mock up
+/data
+seeder.js
