--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.889.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -14,7 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "colors": "^1.4.0"
