--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "books-r-us-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js"
